# foundation-models-for-cbmir

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: 1_create_embeddings.sh  2_create_experiments.py  3_run_retrieval.sh  4_run_linear_probing.sh
scripts/prepare_datasets/: 0_create_datasets.sh
scripts/prepare_datasets/CheXpert/: prepare_CheXpert.py
scripts/prepare_datasets/RadImageNet/: prepare_radimagenet.py
scripts/prepare_datasets/mimic/: prepare_mimic.py
scripts/prepare_datasets/nih14/: prepare_nih14.py
src/: linear_probing.py  retrieval.py  test_retrieval.py
src/embeddings/: create_embeddings.py  models.py
src/evaluation/: evaluate_knn_classification.py  evaluate_linear_probing.py  evaluate_retrieval.py
